--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 .build/
 .DS_Store
+.env
 .netrc
 .swiftpm/configuration/registries.json
 .swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
