--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,42 @@
             "name": "Release sw_vers (src/sw_vers)",
             "program": "${workspaceFolder:workbench}/src/sw_vers/.build/release/sw_vers",
             "preLaunchTask": "swift: Build Release sw_vers (src/sw_vers)"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "args": [],
+            "cwd": "${workspaceFolder:workbench}",
+            "name": "Debug WorkbenchCLI",
+            "program": "${workspaceFolder:workbench}/.build/debug/WorkbenchCLI",
+            "preLaunchTask": "swift: Build Debug WorkbenchCLI"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "args": [],
+            "cwd": "${workspaceFolder:workbench}",
+            "name": "Release WorkbenchCLI",
+            "program": "${workspaceFolder:workbench}/.build/release/WorkbenchCLI",
+            "preLaunchTask": "swift: Build Release WorkbenchCLI"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "args": [],
+            "cwd": "${workspaceFolder:workbench}",
+            "name": "Debug SysInfoKit",
+            "program": "${workspaceFolder:workbench}/.build/debug/SysInfoKit",
+            "preLaunchTask": "swift: Build Debug SysInfoKit"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "args": [],
+            "cwd": "${workspaceFolder:workbench}",
+            "name": "Release SysInfoKit",
+            "program": "${workspaceFolder:workbench}/.build/release/SysInfoKit",
+            "preLaunchTask": "swift: Build Release SysInfoKit"
         }
     ]
 }
