Re-introduce Tuist and some other stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "cSpell.words": [
         "othr"
-    ]
+    ],
+    "sweetpad.build.derivedDataPath": "DerivedData",
+    "sweetpad.build.xcodeWorkspacePath": "Workbench.xcworkspace",
+    "sweetpad.system.enableSetvbuf": true,
+    "sweetpad.tuist.autogenerate": true
 }
