--- a/.mise.toml
+++ b/.mise.toml
@@ -7,3 +7,6 @@ tuist = "latest"
 xcbeautify = "latest"
 xcodes = "latest"
 yamllint = "latest"
+
+[env]
+_.python.venv = { path = "scripts/.venv", create = true }
