Switch to ruff for formatting and add linting script
Signed-off-by: Isaac Halvorson <hello@hisaac.net>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,11 @@
 		"killall",
 		"othr",
 		"pycache",
+		"shellcheck",
 		"shfmt",
 		"swiftpm",
 		"venv",
+		"xcodes",
 		"yapf"
 	],
 	"sweetpad.build.derivedDataPath": "DerivedData",
