--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,9 @@
 [project]
 name = "workbench"
 version = "0.1.0"
-requires-python = ">=3.8"
-
-[build-system]
-requires = ["setuptools>=42", "wheel"]
-build-backend = "setuptools.build_meta"
-
-[project.optional-dependencies]
-dev = [
-    "black>=23.0.0"
+dependencies = [
+    "ruff>=0.8.2",
 ]
+
+[tool.ruff.format]
+indent-style = "tab"
