--- a/.mise.toml
+++ b/.mise.toml
@@ -3,6 +3,7 @@ java = "latest"
 just = "latest"
 python = "latest"
 shfmt = "latest"
+"spm:kattouf/Sake" = "latest"
 tuist = "latest"
 xcbeautify = "latest"
 xcodes = "latest"
